# my_g2o

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  config.h.in  debug.txt  readme_amsl.txt  tutorial_after.g2o  tutorial_before.g2o
g2o/: Makefile  cmake_install.cmake  config.h
g2o/apps/: Makefile  cmake_install.cmake
g2o/apps/g2o_cli/: Makefile  cmake_install.cmake
g2o/apps/g2o_hierarchical/: Makefile  cmake_install.cmake
g2o/apps/g2o_simulator/: Makefile  cmake_install.cmake
g2o/core/: Makefile  cmake_install.cmake
g2o/examples/: CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake
g2o/examples/ba/: Makefile  cmake_install.cmake
g2o/examples/ba_anchored_inverse_depth/: Makefile  cmake_install.cmake
g2o/examples/bal/: Makefile  cmake_install.cmake
g2o/examples/calibration_odom_laser/: Makefile  cmake_install.cmake
g2o/examples/data_convert/: Makefile  cmake_install.cmake
g2o/examples/data_fitting/: Makefile  cmake_install.cmake
g2o/examples/graph_slam3d/: CMakeLists.txt  Makefile  cmake_install.cmake  edge_se3.cpp  edge_se3.h  edge_se3_pointxyz.cpp  edge_se3_pointxyz.h  edge_se3_pointxyz_disparity.cpp  edge_se3_pointxyz_disparity.h  tutorial_slam3d.cpp  types_tutorial_slam3d.h
g2o/examples/icp/: Makefile  cmake_install.cmake
g2o/examples/interactive_slam/: Makefile  cmake_install.cmake
g2o/examples/plane_slam/: Makefile  cmake_install.cmake
g2o/examples/sba/: Makefile  cmake_install.cmake
g2o/examples/simple_optimize/: Makefile  cmake_install.cmake
g2o/examples/sphere/: Makefile  cmake_install.cmake
g2o/examples/tutorial_slam2d/: CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  hello.cpp  tutorial_slam2d.cpp  vertex_se2.cpp
g2o/examples/tutorial_slam3d/: CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  edge_se3.cpp  hello.h  tutorial_slam3d.cpp
g2o/solvers/: Makefile  cmake_install.cmake
g2o/solvers/cholmod/: Makefile  cmake_install.cmake
g2o/solvers/csparse/: Makefile  cmake_install.cmake
g2o/solvers/dense/: Makefile  cmake_install.cmake
g2o/solvers/eigen/: Makefile  cmake_install.cmake
g2o/solvers/pcg/: Makefile  cmake_install.cmake
g2o/solvers/slam2d_linear/: Makefile  (+1 more)
g2o/stuff/: Makefile  cmake_install.cmake
g2o/types/: Makefile  cmake_install.cmake
(+30 files in other folders)
